Using Jib for containerization